--- a/vercel.json
+++ b/vercel.json
@@ -24,6 +24,6 @@
     }
   ],
   "env": {
-    "ANTHROPIC_API_KEY": "@anthropic-api-key"
+    "ANTHROPIC_API_KEY": "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"
   }
 }
